--- a/src/app/admin/orders/components/table-selection/table-selection.component.html
+++ b/src/app/admin/orders/components/table-selection/table-selection.component.html
@@ -43,6 +43,6 @@
         </ng-container>
     </div>
 
-    <button mat-button color="primary" class="mr-2 mt-20" (click)="saveTableInfo()">Done</button>
+    <!-- <button mat-button color="primary" class="mr-2 mt-20" (click)="saveTableInfo()">Done</button> -->
     <!-- <button mat-button color="warn" (click)="dialogRef.close()">Cancel</button> -->
 </div>
