update table class

--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -426,7 +426,7 @@
                                 <mat-icon class="example-tab-icon">view_module</mat-icon>
                                 <p class="mb-0 col-12 px-0"> Table</p>
                             </ng-template>
-                            <div class="tab_inner_body scroll_style table">
+                            <div class="tab_inner_body scroll_style tableBox">
                                 <app-table-selection [form]="form" [blockForms]="blockForms"></app-table-selection>
                             </div>
 
