--- a/src/app/admin/user/user.component.html
+++ b/src/app/admin/user/user.component.html
@@ -15,6 +15,9 @@
             <div class="tab_btn" routerLink="/admin/user/update" routerLinkActive="active pointer-none"  *ngIf=" this._serv.getPermission('users', 'full')">
                 <a href="javascript:;">{{editId?'Update User': 'Add User'}} </a>
             </div>
+            <div class="tab_btn" routerLink="/admin/user/attendance" routerLinkActive="active pointer-none"  *ngIf=" this._serv.getPermission('user-attendance', 'read')">
+                <a href="javascript:;">Attendance </a>
+            </div>
             <!--<div class="tab_btn">
                 <a href="javascript:;">Unit</a>
             </div>
