--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -200,7 +200,7 @@
 <!-- new design -->
 <form [formGroup]="form">
 <div class="row no-gutterd order_out_wrapper">
-    <div class="col-md-auto col-12 px-0">
+    <div class="col-md-auto col-12 px-0" [class.pointer-none]="blockForms">
         <div class="left_bar">
             <div class="left_header">
                 <h2>Order Id: {{orderId ? orderId : '--'}}</h2>
@@ -210,11 +210,16 @@
             </div>
             <h3 class="left_title">Categories</h3>
             <ul class="list-unstyled mb-0 category_list">
-                <li class="active"><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>All</span></li>
-                <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Veg</span></li>
-                <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Nonveg</span></li>
+                <li [class.active]="selectedCategory == 'all'" (click)="selectedCategory = 'all'"><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>All</span></li>
+                <ng-container *ngFor="let item of productList;let i = index;">
+                    <li [class.active]="selectedCategory == item.id" (click)="selectedCategory = item.id">
+                        <div *ngIf="item.featuredImage else noImg" class="product_img" [ngStyle]="{'background-image': 'url(\''+(url + item.featuredImage)+'\')'}"></div>
+                        <span>{{ item.categoryName }}</span>
+                    </li>
+                </ng-container>
+                <!-- <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Nonveg</span></li>
                 <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Starter</span></li>
-                <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Juices</span></li>
+                <li><div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div><span>Juices</span></li> -->
             </ul>
         </div>
     </div>
@@ -245,49 +250,57 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-5 col-12  border-right">
+            <div class="col-md-5 col-12  border-right" [class.pointer-none]="blockForms">
                 <div class="product_lists">
                     <div class="prod_list_header align-items-center d-flex">
                         <h2 class="productHeading">Products</h2>
                         <mat-form-field  appearance="outline" class="ml-auto ew-250 pb-0">
                             <mat-label>Search</mat-label>
-                            <input type="text" matInput>
+                            <input type="text" matInput [(formControl)]="searchProductControl">
                             <mat-icon matSuffix>search</mat-icon>
                         </mat-form-field>
                     </div>
                     <ul class="list-unstyled items_list_ul mb-0">
-                        <li class="itemTitle">Starters</li>
-                        <li class="product_items d-flex">
-                            <input type="checkbox" id="1" value="selected1">
-                            <label for="1">
-                                <div class="produt_img" style="background-image: url('/assets/images/food.jpg');"></div>
-                                <div class="textbox">
-                                    <p>Gobi</p>
-                                    <span>&#8377; 12.00</span>
-                                </div>
-                                <div class="buttonBox text-right">
-                                    <button mat-icon-button aria-label="add" class="addShowBtn pointer-none" color="primary">
-                                        <mat-icon>add_circle_outline</mat-icon>
-                                    </button>
-                                    <div class="input_add_box">
-                                        <div class="d-flex mb-5">
-                                            <mat-slide-toggle color="accent" class="mr-10">Parcel?</mat-slide-toggle>
-                                            <div class="input-group mb-0 ml-auto number_input item_btn">
-                                                <div class="input-group-prepend">
-                                                    <button class="btn btn-outline-secondary" type="button">-</button>
-                                                </div>
-                                                <input type="text" class="form-control" digitOnly>
-                                                <div class="input-group-append">
-                                                    <button class="btn btn-outline-secondary" type="button">+</button>
+                        <ng-container *ngFor="let cat of filteredProductList | async; let ci = index;">
+                            <ng-container *ngIf="cat.products.length > 0 && (selectedCategory == cat.id || selectedCategory == 'all')" >
+                                <li class="itemTitle">{{ cat.categoryName }}</li>
+                                <ng-container *ngFor="let item of cat.products;">
+                                    <li class="product_items d-flex">
+                                        <input type="radio" name="items" #element [id]="cat.id + '_' + item.id" value="selected1">
+                                        <label [for]="cat.id + '_' + item.id">
+                                            <div *ngIf="item.featuredImage else noPrImg" class="produt_img" [ngStyle]="{'background-image': 'url(\''+(url + item.featuredImage)+'\')'}"></div>
+                                            <!-- <div class="produt_img" style="background-image: url('/assets/images/food.jpg');"></div> -->
+                                            <div class="textbox">
+                                                <p>{{ item.productName }}</p>
+                                                <span>{{ item.price | currency }}</span>
+                                            </div>
+                                            <div class="buttonBox text-right">
+                                                <button mat-icon-button aria-label="add" class="addShowBtn pointer-none" color="primary">
+                                                    <mat-icon>add_circle_outline</mat-icon>
+                                                </button>
+                                                <div class="input_add_box">
+                                                    <div class="d-flex mb-5">
+                                                        <mat-slide-toggle *ngIf="selectedOrderType?.tableRequired" [(ngModel)]="item.isParcel" [ngModelOptions]="{standalone: true}"  color="accent" class="mr-10">Parcel?</mat-slide-toggle>
+                                                        <div class="input-group mb-0 ml-auto number_input item_btn">
+                                                            <div class="input-group-prepend">
+                                                                <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'prev')">-</button>
+                                                            </div>
+                                                            <input type="text" class="form-control" digitOnly  [(ngModel)]="item.quantity" [ngModelOptions]="{standalone: true}"  (change)="handleOrderQuantityInput(item, 'change')">
+                                                            <div class="input-group-append">
+                                                                <button class="btn btn-outline-secondary" type="button" (click)="handleOrderQuantityInput(item, 'next')">+</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <button type="button" (click)="onAddItem(element, item)" mat-stroked-button color="primary" class="product_addBtn ew-100 small_btn"><mat-icon>add</mat-icon> Add</button>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <button mat-stroked-button color="primary" class="product_addBtn ew-100 small_btn"><mat-icon>add</mat-icon> Add</button>
-                                    </div>
-                                </div>
-                            </label>
-                        </li>
-                        <li class="product_items d-flex">
+                                        </label>
+                                    </li>
+                                </ng-container>
+                            </ng-container>
+                        </ng-container>
+                        
+                        <!-- <li class="product_items d-flex">
                             <input type="checkbox" id="2" value="selected1">
                             <label for="2">
                                 <div class="produt_img" style="background-image: url('/assets/images/food.jpg');"></div>
@@ -347,7 +360,7 @@
                                     </div>
                                 </div>
                             </label>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -362,7 +375,7 @@
 
                             <div class="tab_inner_body scroll_style items" [class.innerFooter]="items['controls'].length > 0 && !blockForms">
                                 <ng-container *ngFor="let item of items['controls'];let i=index;">
-                                    <div class="row no-gutters order_item_wrapper">
+                                    <div class="row no-gutters order_item_wrapper" *ngIf="!item.get('deletedFlag').value">
                                         <div class="col-auto">
                                             <div class="img_item">
                                                 <img *ngIf="item.get('featuredImage').value" [src]=" url + item.get('featuredImage').value" alt="">
@@ -370,7 +383,7 @@
                                             </div>
                                         </div>
                                         <div class="col">
-                                            <div class="order_item_card" *ngIf="!item.get('deletedFlag').value">
+                                            <div class="order_item_card">
                                                 <div class="order-details col">
                                                     <p class="product_name">{{ item.get('productName').value }} <span class="order_item_card_strip" *ngIf="item.get('isParcel').value">Parcel</span></p>
                                                     <p class="product_price">
@@ -421,7 +434,7 @@
                             </div>
 
                         </mat-tab>
-                        <mat-tab>
+                        <mat-tab *ngIf="selectedOrderType?.tableRequired">
                             <ng-template mat-tab-label>
                                 <mat-icon class="example-tab-icon">view_module</mat-icon>
                                 <p class="mb-0 col-12 px-0"> Table</p>
@@ -566,3 +579,10 @@
 </div>
 
 </form>
+
+<ng-template #noImg>
+    <div class="product_img" style="background-image: url('/assets/images/food.jpg');"></div>
+</ng-template>
+<ng-template #noPrImg>
+    <div class="produt_img" style="background-image: url('/assets/images/food.jpg');"></div>
+</ng-template>
