--- a/src/app/admin/user/update-user/update-user.component.html
+++ b/src/app/admin/user/update-user/update-user.component.html
@@ -97,9 +97,16 @@
             </div>
         </div>
 
-        <div class="d-flex align-items-center mb-20">
-            <p class="my-0 mr-20">Is Active?</p>
-            <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+        <div class="d-flex">
+            
+            <div class="d-flex align-items-center mb-20 mr-50">
+                <p class="my-0 mr-20">Is Active?</p>
+                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
+            </div>
+            <div class="d-flex align-items-center mb-20">
+                <p class="my-0 mr-20">Attendnace?</p>
+                <mat-slide-toggle formControlName="attendaceRequired"></mat-slide-toggle>
+            </div>
         </div>
 
         <div class="">
