--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.scss
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.scss
@@ -1,31 +1,39 @@
 
+#print-section {
+    & * {
+        color: #000 !important;
+    }
+}
+
 td,
 th,
 tr,
 table {
-    border-top: 1px solid #e2e2e2;
+    // border: 1px solid #000000;
     border-collapse: collapse;
     font-size: 1rem;
+    border: none;
 }
 
 td.description,
 th.description {
-    width: 75px;
-    max-width: 75px;
+    // width: 600px;
+    // max-width: 600px;
 }
 
 td.quantity,
 th.quantity {
-    width: 40px;
-    max-width: 40px;
+    // width: 70px;
+    // max-width: 70px;
     word-break: break-all;
 }
 
 td.price,
 th.price {
-    width: 50px;
-    max-width: 50px;
+    // width: 125px;
+    // max-width: 125px;
     word-break: break-all;
+    text-align: right;
 }
 
 .centered {
@@ -33,10 +41,10 @@ th.price {
     align-content: center;
 }
 
-.ticket {
-    width: 155px;
-    max-width: 155px;
-}
+// .ticket {
+//     width: 155px;
+//     max-width: 155px;
+// }
 
 img {
     max-width: inherit;
@@ -48,12 +56,5 @@ p {
 
     &.title {
         font-size: 1.2rem;
-    }
-}
-
-@media print {
-    .hidden-print,
-    .hidden-print * {
-        display: none !important;
     }
 }
