--- a/src/app/admin/user/attendance/attendance.component.scss
+++ b/src/app/admin/user/attendance/attendance.component.scss
@@ -1,3 +1,4 @@
+@import "./../../../../variables.scss";
 .date_change_wrapper {
     .mat-button-toggle-standalone, .mat-button-toggle-group {
         box-shadow: 0px 1px 4px #dedfef;
@@ -21,6 +22,7 @@
 
 .account_table {
     tr {
+
         & td {
             white-space: nowrap;
         }
@@ -31,6 +33,29 @@
             width: 50px;
             font-size: 12px;
             text-align: center;
+
+            
+            &.not_added {
+                background-color: rgba($color-warning, 0.15);
+            }
+
+            .present {
+                width: 10px;
+                height: 10px;
+                display: inline-block;
+                border-radius: 50%;
+                background-color: $color-success;
+                box-shadow: 0px 0px 0px 6px rgba($color-success, 0.25);
+            }
+
+            .absent {
+                width: 10px;
+                height: 10px;
+                display: inline-block;
+                border-radius: 50%;
+                background-color: $color-warning;
+                box-shadow: 0px 0px 0px 6px rgba($color-warning, 0.25);
+            }
         }
     }
 }
