--- a/src/app/admin/user/attendance/update-attandance/update-attandance.component.html
+++ b/src/app/admin/user/attendance/update-attandance/update-attandance.component.html
@@ -1,1 +1,4 @@
-<p>update-attandance works!</p>
+<p>{{ user.firstName }}</p>
+<p>{{ user.lastName }}</p>
+<p>{{ date }}</p>
+<button (click)="saveForm()">Save</button>
