update categories page

--- a/src/app/admin/settings/company-setting/update-company/update-company.component.html
+++ b/src/app/admin/settings/company-setting/update-company/update-company.component.html
@@ -2,7 +2,7 @@
     
     <div class="add_formWrapper">
         <div class="row">
-            <div class="col-sm-auto">
+            <div class="col-sm-auto order-md-12">
                 <div class="product_imrBox">
                     <input type="file" name="" id="prodctImg"  (change)="handleFileInput($event)">
                     <label for="prodctImg" title="Change Image"  [ngStyle]="{'background-image': imageSrc}"></label>
