--- a/src/app/admin/settings/categories-setting/categories-setting.component.html
+++ b/src/app/admin/settings/categories-setting/categories-setting.component.html
@@ -1,94 +1,31 @@
-<div class="page_header d-flex mb-4">
-    <h2 class="header_title">Category</h2>
-    <div class="ml-auto">
-        <button mat-raised-button color="primary" (click)="updateCategory()">Add New</button>
-    </div>
+<div class="accont_header_wrapping pa-25">
+    <h2 class="text-uppercase font-weight-500 mb-0 d-flex align-items-center justify-content-between">
+        Setting
+        <!-- <div>
+            <button mat-raised-button color="primary" routerLink="/admin/settings/company/update">Add New</button>
+        </div> -->
+    </h2>
 </div>
-
-
-<div class="table_outerWrapper mat-elevation-z2 mt-20">
-    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
-        <!-- Position Column -->
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-                    <mat-menu #moreOption="matMenu">
-                    <button mat-menu-item type="button" (click)="updateCategory(element)"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item type="button" (click)="deleteCategory(element)"><mat-icon>delete</mat-icon>Delete</button>
-                </mat-menu>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="categoryName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Title </th>
-            <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef> Branch </th>
-            <td mat-cell *matCellDef="let element"> {{element.branch?.branchTitle}} </td>
-        </ng-container>
+<div class="account_body_wrapper pl-25 pr-25">
+    <div class="body_inner_card">
+        <div class="tab_header">
+            <div class="tab_btn" routerLink="/admin/settings/categories/list" routerLinkActive="active">
+                <a href="javascript:;">Category</a>
+            </div>
+            <div class="tab_btn" routerLink="/admin/settings/categories/update" routerLinkActive="active pointer-none">
+                <a href="javascript:;">{{editId?'Update Category': 'Add Category'}} </a>
+            </div>
+            <!--<div class="tab_btn">
+                <a href="javascript:;">Unit</a>
+            </div>
+            <div class="tab_btn">
+                <a href="javascript:;">Settings</a>
+            </div> -->
+        </div>
+        <div class="tab_body pa-20">
+            <router-outlet></router-outlet>
+        </div>
         
-        <ng-container matColumnDef="isActive">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Active? </th>
-            <td mat-cell *matCellDef="let element"> 
-                <mat-slide-toggle color="accent" (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
-</div>
-
-<div class="right_sidePannel transition" [class.active]="sidemenu">
-    <div class="right_headerBox">
-        <h4 *ngIf="!this.form.get('id').value">Add New</h4>
-        <h4 *ngIf="this.form.get('id').value">Update Category</h4>
     </div>
-    <div class="right_bodyWrapper" [formGroup]="form">
-        <form [formGroup]="form" (submit)="saveCategory($event)">
-            <div class="text-center mb-4">
-                <div class="product_imrBox">
-                    <input type="file" name="" id="prodctImg"  (change)="handleFileInput($event)">
-                    <label for="prodctImg" title="Change Image"  [ngStyle]="{'background-image': imageSrc}"></label>
-                </div>
-            </div>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Category</mat-label>
-                <input type="text" formControlName="categoryName" matInput>
-            </mat-form-field>
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15">
-                <mat-label>Discription</mat-label>
-                <input type="text"  formControlName="description" matInput>
-            </mat-form-field>
-            
-            <mat-form-field  appearance="outline" class="w-100 pb-0 mb-15" *ngIf="userData?.roles == 'Super Admin'">
-                <mat-label>Branch</mat-label>
-                <mat-select matNativeControl formControlName="branch_id" [required]="userData?.roles == 'Super Admin'">
-                    <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
-                </mat-select>
-            </mat-form-field>
 
-            <div class="d-flex align-items-center mb-20 mt-10">
-                <p class="my-0 mr-20">Is Active?</p>
-                <mat-slide-toggle formControlName="isActive"></mat-slide-toggle>
-            </div>
-
-            <div class="d-flex justify-content-between">
-                <button mat-raised-button color="primary" type="submit">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
-                <button mat-raised-button color="warn" type="button" (click)="cancelUpdate()">Cancel</button>
-            </div>
-        </form>
-    </div>
 </div>
-<div class="backdrop" [class.active]="sidemenu" (click)="cancelUpdate()"></div>
