--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -1,4 +1,4 @@
-<div class="ticket" id="print-section">
+<div class="ticket only-print" id="print-section">
     <p class="centered">
         <b class="title">Black bamboo restaurant</b>
         <br>Mukka, surathkal</p>
@@ -49,4 +49,10 @@
         <br>Visit again</p>
 </div>
 
-<button class="hidden-print" (click)="printPage()">Print</button>
+
+<div class="hidden-print text-center ew-300">
+    <h3>Do you want to print again?</h3>
+    
+    <button mat-flat-button (click)="cancelPrint()" color="warn" class="mr-20">Cancel</button>
+    <button mat-flat-button (click)="printPage()" color="primary">Print</button>
+</div>
