--- a/src/app/admin/account-management/new-transaction/new-purchase/new-purchase.component.html
+++ b/src/app/admin/account-management/new-transaction/new-purchase/new-purchase.component.html
@@ -347,6 +347,12 @@
         </div>
     </ng-container>
 
+    <div>
+        <mat-form-field appearance="fill" class="w-100">
+            <mat-label>Description</mat-label>
+            <textarea matInput placeholder="Enter Description text here" formControlName="description"></textarea>
+        </mat-form-field>
+    </div>
     <div class="footer_acc_section d-flex justify-content-end">
         <button type="button" mat-raised-button color="primary" [disabled]="_transact.form.invalid" (click)="_transact.saveFinaldata()">Save</button>
     </div>
