--- a/src/app/guest/signin/signin.component.html
+++ b/src/app/guest/signin/signin.component.html
@@ -2,7 +2,7 @@
     <form (submit)="signIn($event)">
         <mat-card class="center_box" [formGroup]="form">
             <div class="text-center mb-10">
-                <img src="assets/images/logo.png" class="img-fluid" alt="">
+                <img src="assets/images/logo.svg" class="img-fluid ew-150" alt="">
             </div>
             <div class="center_box_title mt-4 mb-5">Sign In</div>
             <mat-card-content class="mt-4">
