update logo changes

--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <span class="logo_headerBox" [class.small]="!_layout.isOpened">
-            <img src="assets/images/logo.png" class="logoImg expand" alt="">
-            <img src="assets/images/logo-small.png" class="logoImg collapsed" alt="">
+            <img src="assets/images/logo-full.svg" class="logoImg expand" alt="">
+            <img src="assets/images/logo-small.svg" class="logoImg collapsed" alt="">
 
         </span> 
         <button type="button" class="ml-3" mat-icon-button (click)="_layout.isOpened = !_layout.isOpened">
