--- a/src/app/admin/layout/header/header.component.scss
+++ b/src/app/admin/layout/header/header.component.scss
@@ -4,7 +4,7 @@
     margin-left: -16px;
     display: inline-flex;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     width: 280px;
     height: 64px;
     padding-left: 16px;
@@ -16,6 +16,7 @@
         -ms-transition: .3s ease-in-out;
         transition: .3s ease-in-out;
         opacity: 1;
+        width: 170px;
         &.collapsed{
             display: none;
         }
