--- a/src/app/guest/signin/signin.component.scss
+++ b/src/app/guest/signin/signin.component.scss
@@ -22,7 +22,9 @@
             font-size: 2rem;
             font-weight: 600;
             text-align: center;
-            width: 100%;
+            width: 100%;    
+            text-transform: uppercase;
+            color: rgba(0, 0, 0, 0.388);
         }
     }
 }
