--- a/src/app/kitchen/layout/kitchen-header/kitchen-header.component.html
+++ b/src/app/kitchen/layout/kitchen-header/kitchen-header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <span class="logo_headerBox">
-            <img src="assets/images/logo.png" class="logoImg expand" alt="">
+            <img src="assets/images/logo-full.svg" class="logoImg expand" alt="">
         </span> 
         <div class="header_navigation">
             <ul>
