--- a/src/app/kitchen/layout/kitchen-header/kitchen-header.component.scss
+++ b/src/app/kitchen/layout/kitchen-header/kitchen-header.component.scss
@@ -4,14 +4,14 @@
     margin-left: -16px;
     display: inline-flex;
     align-items: center;
-    justify-content: center;
+    // justify-content: center;
     width: 280px;
     height: 64px;
     padding-left: 16px;
     padding-right: 16px;
     // box-shadow: 0px 1px 2px 1px rgba($color-primary, 0.18);
     & .logoImg{
-        
+        width: 130px;
         filter: brightness(0) invert(1);
     }
     &.small{
