--- a/src/styles.scss
+++ b/src/styles.scss
@@ -104,11 +104,19 @@ button:focus {
 .text-warning{
     color: $color-warning !important;
 }
+.border-radius-5{
+    border-radius: 5px;
+}
 .transition{
     -webkit-transition: .3s ease-in-out;
     -ms-transition: .3s ease-in-out;
     -moz-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
+}
+.no_outline{
+    &:focus{
+        outline: none;
+    }
 }
 .title_h3{
     font-size: 2.4rem !important;
@@ -979,6 +987,7 @@ label.mat-checkbox-layout {
     p{
         margin-bottom: 0px;
         font-weight: 500;
+        font-size: 1.2rem;
         span{
             font-weight: 400;
             display: inline-block;
