--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1665,8 +1665,7 @@ label.mat-checkbox-layout {
 // New order design end
 
     
-.only-print,
-.only-print * {
+.only-print{
     display: none !important;
 }
 @media print { 
@@ -1703,8 +1702,7 @@ label.mat-checkbox-layout {
         display: none !important;
     }
 
-    .only-print,
-    .only-print * {
-        display: block !important;
+    .only-print{
+        display:block !important;
     }
 }
