--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1666,9 +1666,9 @@ label.mat-checkbox-layout {
 // New order design end
 
     
-.only-print{
-    display: none !important;
-}
+// .only-print{
+//     display: none !important;
+// }
 @media print { 
     
     html, body { 
@@ -1680,6 +1680,7 @@ label.mat-checkbox-layout {
             padding: 0!important;
         }
     }
+    
     app-root {
         display: none !important;
     }
@@ -1695,6 +1696,7 @@ label.mat-checkbox-layout {
     .mat-dialog-container {
         box-shadow: none !important;
         padding: 0 !important;
+        width: 100%;
     }
 
     
