--- a/src/app/admin/report-manager/report-manager.component.html
+++ b/src/app/admin/report-manager/report-manager.component.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
 
-            <div class="table_outerWrapper mt-20">
+            <div class="mt-20">
                 <!-- <table mat-table #reportTable [dataSource]="dataSource" class="w-100">
                     <ng-container matColumnDef="action">
                         <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
@@ -109,10 +109,10 @@
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                 </table> -->
                 <div class="table-responsive">
-                    <table class="table account_table" matSort>
+                    <table class="table account_table" #reportTable>
                         <thead>
                             <tr>
-                                <th class="ew-100">Action</th>
+                                <!-- <th class="ew-100">Action</th> -->
                                 <th >Order No</th>
                                 <th >Order Amount</th>
                                 <th>Order Status</th>
@@ -121,7 +121,7 @@
                         </thead>
                         <tbody>
                                 <tr *ngFor="let item of dataSource; let i =index">
-                                    <td>
+                                    <!-- <td>
                                         <button mat-icon-button [matMenuTriggerFor]="moreOption">
                                             <mat-icon>more_vert</mat-icon>
                                         </button>
@@ -129,7 +129,7 @@
                                             <button mat-menu-item type="button" [routerLink]="['/admin/order/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
                                             <button mat-menu-item type="button"><mat-icon>delete</mat-icon>Delete</button>
                                         </mat-menu>
-                                    </td>
+                                    </td> -->
                                     <td>
                                         {{item.id }}
                                     </td>
@@ -142,6 +142,12 @@
                                     </td>
                                 </tr>
                                
+                                <tr class="total_row">
+                                    <td>Total</td>
+                                    <td>{{totalOrderAmount | currency:'':''}}</td>
+                                    <td></td>
+                                    <td></td>
+                                </tr> 
                         </tbody>
                     </table>
                     <!-- <mat-paginator [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator> -->
