--- a/src/app/admin/user/update-user/update-user.component.html
+++ b/src/app/admin/user/update-user/update-user.component.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="">
-            <button mat-raised-button color="primary" class="mr-10"
+            <button mat-raised-button color="primary" [disabled]="processingAction" class="mr-10"
                 type="submit">{{ (this.form.get('id').value)?'Update':'Add'}}</button>
             <button mat-raised-button color="warn" type="button" routerLink="/admin/user/list">Cancel</button>
         </div>
