--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -45,6 +45,7 @@
             </tr>
         </tbody>
     </table>
+    <p>&nbsp;</p>
     <p class="centered">Thank You :(
         <br>Visit again</p>
 </div>
