update issue fix changes

--- a/src/app/admin/account-management/account-master/account-master.component.html
+++ b/src/app/admin/account-management/account-master/account-master.component.html
@@ -18,9 +18,9 @@
             <div class="tab_btn" routerLink="/admin/account-management/masters/unit" routerLinkActive="active">
                 <a href="javascript:;">Unit</a>
             </div>
-            <div class="tab_btn" routerLink="/admin/account-management/masters/settings" routerLinkActive="active">
+            <!-- <div class="tab_btn" routerLink="/admin/account-management/masters/settings" routerLinkActive="active">
                 <a href="javascript:;">Settings</a>
-            </div>
+            </div> -->
         </div>
         <div class="tab_body pa-20">
             <router-outlet></router-outlet>
