--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -7,7 +7,7 @@
                     <th class="ew-100"  *ngIf=" this._serv.getPermission('users', 'full')">Action</th>
                     <th mat-sort-header="firstName" class="">User Name</th>
                     <th mat-sort-header="roles" class="ew-200">Role</th>
-                    <th mat-sort-header="description" class="ew-200">Branch</th>
+                    <th mat-sort-header="description">Branch</th>
                     <th mat-sort-header="mobileNumber" class="ew-200">Mobile Number</th>
                     <th mat-sort-header="email" class="ew-250">Email</th>
                     <th class="ew-150">Is Active?</th>
