--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -320,11 +320,11 @@
                                         <span class="value_section">{{ form.get('orderAmount').value | currency }}</span>
                                     </div>
                                 </div>
-                                <div class="remaning_box">
+                                <div class="remaning_box"  *ngIf="!blockForms">
                                     <h4>Ballance Change Caluclator</h4>
                                     <div class="d-flex align-items-center">
                                         <div class="col px-0">
-                                            <mat-form-field appearance="outline" class="w-100 inline-input order-calc" *ngIf="!blockForms">
+                                            <mat-form-field appearance="outline" class="w-100 inline-input order-calc">
                                                 <!-- <mat-label>Received</mat-label> -->
                                                 <input matInput digitOnly placeholder="Received" [formControl]="calAmount" [decimal]="true">
                                             </mat-form-field>
@@ -332,7 +332,7 @@
                                         <div class="col-auto">
                                             <div class="bal_change_box ew-150">
                                                 
-                                                <p><span>Return</span> : {{ calAmount.value - form.get('orderAmount').value  }}</p>
+                                                <p><span>Return</span> : {{(calAmount.value > 0) ? (calAmount.value - form.get('orderAmount').value) : 0  }}</p>
                                             </div>
                                         </div>
                                     </div>
