--- a/src/app/admin/settings/company-setting/list-company/list-company.component.html
+++ b/src/app/admin/settings/company-setting/list-company/list-company.component.html
@@ -5,7 +5,7 @@
                         <thead>
                             <tr>
                                 <th class="ew-100">Action</th>
-                                <th class="ew-200">Name</th>
+                                <th>Name</th>
                                 <th class="">Details</th>
                                 <th class="ew-200">Allowed Branches</th>
                                 <th class="ew-150">Accounting?</th>
